# neudia

./: README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
charday/: __init__.py  callbacks.py  cli.py  defaults.py  models.py  modules.py  spec.py  special.py
charday/data/: tsv.py
configs/: README.md  ben_romanized.yaml  bilstm.yaml  heb.yaml  lat_glides.yaml  lat_naive.yaml  lat_no_glides.yaml
examples/: README.md  aeneid-no_glides.txt  discover.py  methods.py  strip.py
examples/strip/: README.md  strip.py
examples/wandb_sweeps/: README.md
examples/wandb_sweeps/configs/: bayesian_grid.yaml  grid.yaml  random_grid.yaml  tune.yaml
neudia/: __init__.py  callbacks.py  cli.py  defaults.py  encoders.py  models.py  modules.py  special.py  taggers.py
neudia/data/: __init__.py  batches.py  collators.py  datamodules.py  datasets.py  indexes.py  mappers.py  tsv.py
tests/: neudia_test.py
tests/testdata/: Makefile  bigru.test  bigru.yaml  bigru_expected.test  bigru_expected.txt  bilstm.txt  bilstm.yaml  bilstm_expected.test  bilstm_expected.txt  byt5.yaml  byt5_expected.test  byt5_expected.txt  dev.tsv  expected.test  rotary_transformer.yaml  rotary_transformer_expected.test  rotary_transformer_expected.txt  test.tsv  train.tsv  trainer.yaml  transformer.test  transformer.yaml  transformer_expected.txt  unigru.txt  unigru.yaml  unigru_expected.test  unilstm.yaml  unilstm_expected.test  unilstm_expected.txt
