[project]
name = "neudia"
version = "0.0.1"
description = "Neural diacritization"
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10,<3.14"
authors = [
    { name = "Kyle Gorman", email = "kylebgorman@gmail.com" },
]
keywords = [
    "computational linguistics",
    "morphology",
    "natural language processing",
    "language",
]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PyYAML>=6.0.2,<7.0.0",
    "jsonargparse[signatures]>=4.40.0,<5.0.0",
    "lightning==2.5.2",
    "numpy<=2.3.1",
    "torch==2.7.1",
    "torchmetrics==1.7.4",
    "wandb>=0.18.7,<0.19.0",
    "yoyodyne==0.4.4",
]
[build-system]
requires = ["setuptools >= 72.1.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/CUNY-CL/neudia"

[tool.setuptools.packages.find]
include = ["neudia*"]
exclude = ["configs*", "examples*", "scripts*"]

[project.scripts]
neudia = "neudia.cli:main"

[tool.setuptools]
include-package-data = false
